--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "morgan": "~1.9.1",
     "multer": "^1.4.4",
     "nodemon": "^2.0.16",
+    "paypal-rest-sdk": "^1.8.1",
     "razorpay": "^2.8.1",
     "sweetalert2": "^11.4.14",
     "twilio": "^3.77.0"
